# vuedemo

./: .dockerignore  .env.example  .eslintrc.js  .gitignore  .lintstagedrc.json  .prettierignore  .prettierrc  CONTRIBUTING.md  DOCKER_SETUP.md  LICENSE  Makefile  PROJECT_STATUS_REPORT.md  README.md  change_git_author.sh  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md
.husky/: commit-msg
apps/ai-service/: .env.example  .gitignore  API_ENDPOINTS.md  EXECUTION_API_IMPLEMENTATION.md  Makefile  OLLAMA_SERVICE.md  PROJECT_STATUS.md  README.md  SETUP.md  WORKFLOW_ENGINE_IMPLEMENTATION.md  pyproject.toml
apps/ai-service/app/: __init__.py  main.py
apps/ai-service/app/api/: deps.py
apps/ai-service/app/api/v1/: __init__.py  execute.py
apps/ai-service/app/core/: __init__.py  config.py  logging.py
apps/ai-service/app/engine/: __init__.py  context.py  workflow_engine.py
apps/ai-service/app/engine/nodes/: README.md  __init__.py  base.py  condition_node.py  input_node.py  llm_node.py  output_node.py  transform_node.py
apps/ai-service/app/schemas/: __init__.py  execution.py  node.py  workflow.py
apps/ai-service/app/services/: __init__.py  execution_service.py  ollama_service.py
apps/ai-service/examples/: README.md  ollama_example.py  workflow_engine_example.py
apps/ai-service/scripts/: setup.sh
apps/ai-service/tests/: conftest.py  test_main.py  test_ollama_service.py  test_workflow_engine.py
docker/: .env.dev.example  .env.example  .env.nginx.example  DEPLOYMENT.md  DOCKER_COMPOSE_GUIDE.md  Makefile  (+23 more)
(+173 files in other folders)
